# SceKernelNIDCompat

./: CMakeLists.txt  README.md  export.yml  nid_compat.txt
src/: main.c  modulemgr_3.10_3.74.h
